#VERSION 0.9.6#
 
 - fixed a problem with default controller action name. We moved default action name verification to getRoute() and simplified method 
   dispatchAction() in class Peak_Controller_Action
 - modified Peak_View_Helper_Debugbar and debugbar.js to correctly start the bar minimized when debugbar.js need to load jquery cdn
 - renamed class View_Helper_assets to Peak_View_Helper_assets as it should have been.
 - fixed an uncaught exception throw in getFromMethod() of Peak_Annotations when method don't exists
 - fixed params parsing problem with Peak_Annotations::parse() when param contains "-" char
 - replaced method add() by setTags() in class Peak_Annotations. Modified method parse() to accept different var type of $_tags.
 - added class View_Helper_assets for facilitating multiples insertions of files like css/js/img/etc. in views
 - changed method __construct of Peak_Model_Zendatable_Mutator to prevent database change if no table/primary/schema specified
 - modified method save() of class Peak_Model_Zendatable to handle new before/after methods.
 - added 4 new methods to class Peak_Model_Zendatable : beforeInsert(), afterInsert(), beforeUpdate() and afterUpdate().
   Those new methods do nothing by default. Children classes can now implement those ones if needed to alter the way save() work
 - updated vendor twitter bootstrap to 2.3.0

#VERSION 0.9.5#
 
 - fixed Peak_Model_Pagination because of changed visibility of method Peak_Model_Zendatable::query()
 - added method query() in Peak_Model_Zendatable_Mutator with public visibility.
 - passed method query() visibility to protected in class Peak_Model_Zendatable.
 - added class Peak_Model_Zendatable_Mutator. This allow us to perform stuff on the fly on multiples tables.
 - added method getMethodCodeBlock() to class Peak_Zreflection
 - fixed a bug that return empty array with Peak_Filters::globalSanitize() when no filter is set. This method will now